// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareType should render correctly 1`] = `
<Component
  description="School Fare Type selection page of the Create Fares Data Service"
  errors={Array []}
  title="School Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/schoolFareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="school-fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="school-fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="school-fare-type-operator-hint"
        >
           
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="school-fare-type-single"
          errors={Array []}
        >
          <FareTypeRadios
            fares={
              Array [
                Object {
                  "fareType": "single",
                  "hint": "A ticket for a point to point journey",
                  "label": "Single ticket",
                },
                Object {
                  "fareType": "flatFare",
                  "hint": "A fixed fee ticket for a single journey",
                  "label": "Flat fare ticket",
                },
                Object {
                  "fareType": "period",
                  "hint": "A ticket valid for a number of days, weeks, months or years",
                  "label": "Period ticket",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages fareType should render error messaging when errors are passed to the page 1`] = `
<Component
  description="School Fare Type selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a fare type from the options",
        "id": "school-fare-type-single",
      },
    ]
  }
  title="School Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/schoolFareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose a fare type from the options",
            "id": "school-fare-type-single",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="school-fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="school-fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="school-fare-type-operator-hint"
        >
           
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="school-fare-type-single"
          errors={
            Array [
              Object {
                "errorMessage": "Choose a fare type from the options",
                "id": "school-fare-type-single",
              },
            ]
          }
        >
          <FareTypeRadios
            fares={
              Array [
                Object {
                  "fareType": "single",
                  "hint": "A ticket for a point to point journey",
                  "label": "Single ticket",
                },
                Object {
                  "fareType": "flatFare",
                  "hint": "A fixed fee ticket for a single journey",
                  "label": "Flat fare ticket",
                },
                Object {
                  "fareType": "period",
                  "hint": "A ticket valid for a number of days, weeks, months or years",
                  "label": "Period ticket",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
